--- a/Index.HTML
+++ b/Index.HTML
@@ -38,7 +38,7 @@
 
 		<h5>This is a h5 heading</h5>
 
-		<h6>This is a h6 heading</h6>
+		<!-- <h6>This is a h6 heading</h6> -->
 
 
 		<h6>this another h6 tag </h6>
